Initial 1.19 port