@@ -1,29 +1,80 @@
-buildscript {
-    repositories {
-        maven {
-            name = "MinecraftForge"
-            url = uri("https://files.minecraftforge.net/maven/")
+plugins {
+    id 'eclipse'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'com.diffplug.spotless' version '6.4.1'
+}
+
+version = '1.3.0-1.19.2'
+group = 'ninety'
+archivesBaseName = 'megacells'
+
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
+minecraft {
+    mappings channel: 'official', version: '1.19.2'
+
+    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+    runs {
+        client {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            property 'forge.enabledGameTestNamespaces', 'megacells'
+
+            mods {
+                megacells {
+                    source sourceSets.main
+                }
+            }
         }
 
-        mavenCentral()
-    }
+        server {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            property 'forge.enabledGameTestNamespaces', 'megacells'
 
-    dependencies {
-        classpath(group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true)
-        classpath 'org.spongepowered:mixingradle:0.7.+'
+            mods {
+                megacells {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        gameTestServer {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            property 'forge.enabledGameTestNamespaces', 'megacells'
+
+            mods {
+                megacells {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        data {
+            workingDirectory project.file('run')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+
+            args '--mod', 'megacells', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+
+            mods {
+                megacells {
+                    source sourceSets.main
+                }
+            }
+        }
     }
 }
 
-plugins {
-    id("com.matthewprenger.cursegradle") version "1.4.0"
-    id("com.diffplug.spotless") version "6.4.1"
-}
-
-apply(plugin: "net.minecraftforge.gradle")
-apply plugin: 'org.spongepowered.mixin'
-
-group = "ninety"
-version = "1.3.0"
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenLocal()
@@ -51,110 +102,47 @@ repositories {
 }
 
 dependencies {
-    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
+    minecraft("net.minecraftforge:forge:1.19.2-${forge_version}")
 
     implementation(fg.deobf("appeng:appliedenergistics2:${ae2_version}"))
 
-    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api"))
-    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}"))
-
-    compileOnly(fg.deobf("mekanism:Mekanism:${minecraft_version}-${mekanism_version}"))
     runtimeOnly(fg.deobf("mekanism:Mekanism:${minecraft_version}-${mekanism_version}"))
     implementation(fg.deobf("curse.maven:appmek-574300:${appmek_fileid}"))
 
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-}
-
-sourceSets {
-    main {
-        resources {
-            srcDir("src/generated/resources")
-        }
-    }
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-
-minecraft {
-    mappings(channel: "official", version: "${minecraft_version}")
-
-    /**
-     * Configures properties common to all run configurations
-     */
-    def commonRunProperties = {
-        workingDirectory(project.file("run"))
-
-        property("forge.logging.console.level", "debug")
-        property("fml.earlyprogresswindow", "false")
-        jvmArgs("--add-opens", "java.base/sun.security.util=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.base/java.util.jar=ALL-UNNAMED")
-
-        // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
-        property("mixin.env.remapRefMap", "true")
-        property("mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg")
-        // property "mixin.debug.export", "true"
-
-        mods {
-            megacells {
-                source(sourceSets.main)
-            }
-        }
-    }
-
-    runs {
-        client {
-            with(commonRunProperties)
-        }
-
-        server {
-            with(commonRunProperties)
-        }
-
-        data {
-            with(commonRunProperties)
-            // ForgeGradle will just force-exit the Gradle Daemon which fails our builds in case
-            // a daemon is used for any reason.
-            forceExit false
-            args("--mod", "megacells", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources"))
-        }
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-    options.release.set(17)
-}
-
-processResources {
-    inputs.property("version", project.version)
-
-    exclude(".cache")
-
-    filesMatching("META-INF/mods.toml") {
-        expand("version": project.version)
-    }
+    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 }
 
 jar {
-    finalizedBy("reobfJar")
-
-    from(sourceSets.main.output.classesDirs)
-    from(sourceSets.main.output.resourcesDir)
-
     manifest {
         attributes([
                 "Specification-Title"     : "MEGA Cells",
                 "Specification-Vendor"    : "90",
-                "Specification-Version"   : "${project.version}",
-                "Implementation-Title"    : "${project.name}",
-                "Implementation-Version"  : "${project.version}",
+                "Specification-Version"   : project.version,
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "90",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+}
+
+jar.finalizedBy('reobfJar')
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
+    repositories {
+        maven {
+            url "file://${project.projectDir}/mcmodsrepo"
+        }
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
 
 spotless {
